[Aula-34] Configurando o SpringDoc OpenAPI 3.1 e Swagger 3

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -4,3 +4,8 @@ spring.profiles.active=h2
 #LOCALE
 spring.mvc.locale-resolver=fixed
 spring.mvc.locale=pt_BR
+
+springdoc.swagger-ui.path=/docs-parking.html
+springdoc.api-docs.path=/docs-parking
+springdoc.packages-to-scan=com.softwarefoundation.parkingapi.web.controller
+springdoc.swagger-ui.enabled=true
